# human-interface-engine

./: .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  go.mod  package.json  pnpm-lock.yaml
components/control_panel/: Cargo.toml
components/control_panel/src/: lib.rs
components/grpc/: Cargo.toml
components/grpc/src/: lib.rs  serve.rs
components/grpc/src/viewer_rpc/: service.rs
components/protobuf/: Cargo.toml  build.rs
components/protobuf/src/: lib.rs
components/runner/: Cargo.toml
components/runner/src/: main.rs
components/viewer/: Cargo.toml  build.rs
components/viewer/src/: camera.rs  input.rs  lib.rs  scene.rs
components/viewer/src/manage_objects/: global.rs  mod.rs  request.rs  spawn.rs
components/viewer/src/manage_objects/request/: object.rs
components/viewer/src/rpc/: mod.rs  serve.rs  service.rs
components/viewer/src/types/: mod.rs
examples/benchmark_01/: main.go
proto/viewer/v1/: math.proto  object.proto  viewer.proto
scripts/: pre-commit
