[workspace]
resolver = "3"
members = [ "components/control_panel", "components/grpc", 
  "components/protobuf",
  "components/runner",
  "components/viewer"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
thiserror = { version = "2" }
anyhow = "1.0.98"
uuid = {version = "1.16.0", features = ["std", "v7"]}
bevy = "0.16.0"
once_cell = "1.21.3"
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.13.1"
tonic-build = "0.13.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
