[package]
name = "grpc"
version.workspace = true
edition.workspace = true

[dependencies]
bevy ={ workspace = true }
protobuf = { path = "../protobuf" }
viewer = { path = "../viewer" }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
