[package]
name = "runner"
version.workspace = true
edition.workspace = true

[features]
default = ["bevy/dynamic_linking"]
release = ["viewer/release"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
viewer = { path = "../viewer" }
bevy = "0.16.0"
grpc = { path = "../grpc" }
