[package]
name = "viewer"
version = "0.1.0"
authors = ["Satsuki Akiba <anosatsuk124@gmail.com>"]
edition.workspace = true

[features]
default = ["bevy/dynamic_linking"]
release = []

[dependencies]
anyhow = "1.0.98"
bevy = "0.16.0"
once_cell = "1.21.3"
prost = "0.13.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.13.1"
uuid = {version = "1.16.0", features = ["std", "v7"]}
thiserror = { workspace = true }
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.13.1"
