[package]
name = "viewer"
version = "0.1.0"
authors = ["Satsuki Akiba <anosatsuk124@gmail.com>"]
edition.workspace = true

[features]
default = ["bevy/dynamic_linking"]
release = []

[dependencies]
anyhow = { workspace = true }
bevy = "0.16.0"
once_cell = "1.21.3"
uuid = { workspace = true }
thiserror = { workspace = true }

