[package]
name = "viewer"
version = "0.1.0"
authors = ["Satsuki Akiba <anosatsuk124@gmail.com>"]
edition.workspace = true

[features]
default = ["bevy/dynamic_linking"]
release = []

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

